--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,10 @@
 <header class="encabezado">
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/inicio">
                 <img class="logo" src="/imagenes/huevoEggLogo.png" alt="Logo Egg">
             </a>
-            
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -12,13 +12,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item sitios-encabezado">
-                        <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="/inicio">Inicio</a>
                     </li>
                     <li class="nav-item sitios-encabezado">
                         <a class="nav-link active" th:if="${session.usuariosession != null}" aria-current="page" href="/noticia/mostrarnoticias">Noticias</a>
                     </li>
                     <li class="nav-item sitios-encabezado" sec:authorize ="hasRole('ADMIN')">
                         <a class="nav-link active" th:if="${session.usuariosession != null}" aria-current="page"  href="/noticia/listado">Panel Admin</a>
+                    </li>
+                    <li class="nav-item sitios-encabezado" sec:authorize ="hasRole('ADMIN')">
+                        <a class="nav-link active" th:if="${session.usuariosession != null}" aria-current="page"  href="/admin/usuarios">Modificar Usuarios</a>
                     </li>
                     <li class="nav-item sitios-encabezado">
                         <a class="nav-link active" th:if="${session.usuariosession == null}" aria-current="page" href="/login">Iniciar Sesión</a>
